[tool.poetry]
name = "poss"
version = "0.1.0"
description = "PDF OCR Stream Server"
authors = ["HowardChan <lonely829@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
xoscar = "^0.3.3"
PyMuPDF = "^1.24.11"
websockets = "^13.1"
loguru = "^0.7.2"
pydantic-settings = "^2.6.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
minio = "^7.2.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
